--- a/tootoo/r7/tootoo-7-template.html
+++ b/tootoo/r7/tootoo-7-template.html
@@ -20,8 +20,8 @@
 		subText: 'Your GitHub exploring happy place',
 		repo : 'pushme-pullyou.github.io',
 		branch : 'master',
-		folder : '',
-		noIndex : 'true' // try to show read instead of loding index.html
+		folder : 'tootoo',
+		noIndex : true // try to show read instead of loding index.html
 	};
 
 	init();
