--- a/tootoo/examples/prediqtiv.html
+++ b/tootoo/examples/prediqtiv.html
@@ -6,7 +6,7 @@
 <body>
 <script>
 
-	window.location.href = './r7/tootoo-7-template.html#@@@./README.md';
+	window.location.href = './tootoo-7-prediqtiv.html' + location.hash;
 
 </script>
 </body>
