--- a/tootoo/examples/tootoo-7-theo-pages2.html
+++ b/tootoo/examples/tootoo-7-theo-pages2.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
-<script src=tootoo-r5.js ></script>
+<script src=../r7/tootoo-7.js ></script>
 <script>
 // Copyright © 2017 Jaanga authors. MIT license
 // https://github.com/showdownjs/showdown
@@ -61,6 +61,10 @@
 			'#contents { border: 0px #ccc solid; height: 100%; left: 325px; position: absolute; width: ' + ( window.innerWidth - 325 ) + 'px; }' +
 //			'#contents { border: 2px #ccc solid; margin-left: 325px; position: absolute; width: 100%; }' +
 
+			'#editButton { background-color: #555; color: #fff; opacity: 0.5; padding: 8px; position: fixed; right: 20px; top: 20px; }' +
+			'#editButton:hover { cursor: pointer; opacity: 1; }' +
+			'#editButton a { text-decoration: none; color: #fff; }' +
+
 			'#hamburger { background-color: #eee; left: 325px; position: absolute; top: 20px;  z-index: 1 }' +
 			'#hamburger h2 { margin: 0;}' +
 
@@ -99,7 +103,7 @@
 
 				'<details open>' +
 
-					'<summary><h3>Menu</h3></summary>' +
+					'<summary><h3 id=menuTitle >Menu</h3></summary>' +
 
 					'<div id=menuBreadcrumbs ></div>' + b +
 
