--- a/tootoo/examples/ztootoo-7-template.html
+++ b/tootoo/examples/ztootoo-7-template.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
-<script src=tootoo-7.js ></script>
+<script src=../r7/tootoo-7.js ></script>
 <script>
 // Copyright © 2017 PushMe PullYou authors. MIT license
 // https://github.com/showdownjs/showdown
