--- a/tootoo/examples/tootoo-7-prediqtiv.html
+++ b/tootoo/examples/tootoo-7-prediqtiv.html
@@ -37,8 +37,8 @@
 		TOO.fileTitles = [
 
 			[ 'header', 'predIQtiv' ],
-				[ '', 'README.md', 'predIQtiv home page' ],
-				[ '', 'license.md', 'Copyright and license' ],
+				[ './', 'README.md', 'predIQtiv home page' ],
+				[ './', 'license.md', 'Copyright and license' ],
 			[ 'header', 'eyeCue'],
 				[ 'eye-cue/', 'README.md', 'eyeCue Read Me' ],
 			[ 'header', 'Trades'],
