--- a/tootoo/examples/tootoo-8-prediqtiv.html
+++ b/tootoo/examples/tootoo-8-prediqtiv.html
@@ -2,29 +2,30 @@
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title>The JavaScript Way</title>
+<title>predIQtive</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
-<meta name=description content='Browse and view The JavaScript Way files on GitHub with remarkable ease' >
-<meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
-<meta name=date content='2017-03-26' >
+<meta name=description content='A variety of tools to browse and view all S&P 500 symbols all at once.' >
+<meta name=keywords content='Three.js,WebGL,CSS,HTML,JavaScript,GitHub,FOSS' >
+<meta name=date content='2017-04-08' >
 </head>
 <body>
 <script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
-<script src=../r7/tootoo-7.js ></script>
+<script src=../r8/tootoo-8.js ></script>
 <script>
-// Copyright © 2017 Pushme Pullyou authors. MIT license
+// Copyright © 2017 PushMe PullYou authors. MIT license
 // https://github.com/showdownjs/showdown
 
+	let images = 'https://raw.githubusercontent.com/prediqtiv/prediqtiv.github.io/master/images/';
 
 	let user = {
-		user : 'bpesquet',
-		subText: 'Your JavaScript learning happy place',
-		repo : 'thejsway',
+		user : 'prediqtiv',
+		subText : 'Invest smarter',
+		repo : 'prediqtiv.github.io',
 		branch : 'master',
 		folder : '',
-		rawgit: true
-//		noIndex: true
+		noIndex : true
 	};
+
 
 	TOO.setMenuContents = function() {
 
@@ -35,31 +36,20 @@
 
 		TOO.fileTitles = [
 
-			[ 'header', 'Introduction' ],
-				[ 'intro01.md', 'About this book' ],
-				[ 'intro02.md', 'Welcome to programming' ],
-				[ 'intro03.md', 'Introducing JavaScript' ],
-				[ 'intro04.md', 'What you\'ll need' ],
+			[ 'header', 'predIQtiv' ],
+				[ './', 'README.md', 'predIQtiv home page' ],
+				[ './', 'license.md', 'Copyright and license' ],
+			[ 'header', 'eyeCue'],
+				[ 'eye-cue/', 'README.md', 'eyeCue Read Me' ],
+			[ 'header', 'Trades'],
+				[ 'trades-get/', 'README.md', 'Trades Get Read Me' ],
+			[ 'header', 'Tweets'],
+				[ 'tweets/', 'README.md', 'Tweets Read Me' ],
+			[ 'header', 'White Papers'],
+				[ 'white-papers/', 'README.md', 'White Papers Read Me' ],
+			[ 'header', 'Device Parameters Test '],
+				[ 'device-parameters-test/', 'README.md', 'Device Parameters Test Read Me' ],
 
-			[ 'header', 'Part I: Learn to code programs' ],
-				[ 'chapter01.md', '1. 3, 2, 1... Code!' ],
-				[ 'chapter02.md', '2. Play with variables' ],
-				[ 'chapter03.md', '3. Add conditions' ],
-				[ 'chapter04.md', '4. Repeat statements' ],
-				[ 'chapter05.md', '5. Write functions'],
-				[ 'chapter06.md', '6. Create your first objects'],
-				[ 'chapter07.md', '7. Store data in arrays'],
-				[ 'chapter08.md', '8. Work with strings'],
-				[ 'chapter09.md', '9. Understand object-oriented programming' ],
-				[ 'chapter10.md', '10. Discover functional programming'],
-
-			[ 'header', 'Part II: Create interactive web pages'],
-			[ 'header', '...'],
-			[ 'header', 'Part III: Build web apps'],
-			[ 'header', '...'],
-			[ 'header', 'Conclusion'],
-			[ 'header', '...' ],
-				[ 'concl02.md', 'Acknowledgements' ],
 
 		];
 
@@ -73,20 +63,19 @@
 			} else {
 
 				TOO.menuItems.innerHTML += '<div id=file' + count++ + ' style=width:100%; >' +
-				'<a href=JavaScript:TOO.getFileSetContents( "manuscript/","' + TOO.fileTitles[ i ][ 0 ] + '"); > ' + TOO.fileTitles[ i ][ 1 ] + ' </a>' +
+				'<a href=JavaScript:TOO.getFileSetContents("' + TOO.fileTitles[ i ][ 0 ] + '","' + TOO.fileTitles[ i ][ 1 ] + '"); > ' +
+					TOO.fileTitles[ i ][ 2 ] +
+				' </a>' +
 				'</div>';
 
-				TOO.files.push( TOO.fileTitles[ i ][ 0 ] );
+				TOO.files.push( TOO.fileTitles[ i ][ 0 ] + TOO.fileTitles[ i ][ 1 ] );
 
 			 }
 		}
 
-//		TOO.getFileSetContents( 'manuscript/', 'intro01.md' );
-
-
 		if ( !location.hash ) {
 
-			TOO.getFileSetContents( 'manuscript/', 'intro01.md' );
+			TOO.getFileSetContents( '', 'README.md' );
 
 		} else {
 
@@ -96,11 +85,10 @@
 
 	}
 
+
 	init();
 
 	function init() {
-
-// should there be a basic css in the JavaScript file?
 
 		let css, container, contents, hamburger, menu;
 		const b = '<br>';
@@ -108,7 +96,8 @@
 		css = document.body.appendChild( document.createElement('style') );
 		css.innerHTML =
 			'html, body { font: 12pt monospace; height: 100%; margin: 0; }' +
-			'a { color: crimson; text-decoration: none; }' +
+			'a { color: blue; text-decoration: none; }' +
+			'a:hover { text-decoration: underline; }' +
 			'button, input[type=button] { background-color: #ccc; border: 2px #fff solid; color: #322; }' +
 			'pre, blockquote { background-color: #eee; padding: 10px; }' +
 			'summary { outline: none; }' +
@@ -116,7 +105,7 @@
 
 			'.popUp { background-color: white; border: 1px solid red; left: 180px; opacity: 1.0; padding: 5px; position: absolute; width: 120px; z-index: 10; }' +
 
-			'#bars { color: crimson; cursor: pointer; font-size: 24pt; text-decoration: none; }' +
+			'#bars { color: blue; cursor: pointer; font-size: 24pt; text-decoration: none; }' +
 
 			'#container {  height: 100%; left: 0; position: absolute; transition: left 1s; width: 100%; }' +
 
@@ -151,18 +140,16 @@
 			'<div id=menu >' +
 
 				'<h2>' +
-					'<a href=https://' + user.user + '.github.io/ title="' + user.subText + '" > &#x2766</a>' + b +
-					'<a href="" title="Click here to refresh this page" >' + document.title + '</a>' +
-					' ~ <a href="https://github.com/' + user.user + '/' + user.repo + '" onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>' +
+//					'<a href=https://' + user.user + '.github.io/ title="' + user.subText + '" > &#x2766 </a>' + b +
+					'<a href="" title="Click here to refresh this page" ><img src=' + images + 'predIQtiv.png height=48px ></a>' +
+//					' ~ <a href="https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo/" onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>' +
+					' <a href="https://github.com/' + user.user + '/' + user.repo + '" onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; style=vertical-align:top; > &#x24D8; </a>' +
 
 				'</h2>' +
 
 				'<div class=popUp id=popHelp style=display:none; ><div>Hi there!</div>Click the i-in-circle, info icon for latest updates.</div>' +
 
-				'<div><small><i>' +
-					'By Baptiste Pesquet' + b  +
-					'Get off to a good start in the JavaScript universe or catch up with its newest evolutions.' +
-				'</i></small></div>' + b +
+				'<p><small>' + document.head.querySelector( "[name=description]" ).content  + '</small></p>' +
 
 				'<div>' +
 					'<button onclick=TOO.setMenu=TOO.setMenuContents;TOO.setMenu();  >Table of Conntents</button>' +
@@ -171,7 +158,7 @@
 
 				'<details open>' +
 
-					'<summary><h3 id=menuTitle > Contents </h3></summary>' +
+					'<summary><h3 id=menuTitle >Menu</h3></summary>' +
 
 					'<div id=menuBreadcrumbs ></div>' + b +
 
@@ -193,13 +180,13 @@
 
 				'<details>' +
 					'<summary><h3>About</h3></summary>' +
-					'<p>Copyright &copy; ' + ( new Date() ).getFullYear() + ' ' + user.repo + ' authors. ' +
+					'<p>Copyright &copy; ' + ( new Date() ).getFullYear() + ' ' + user.user + ' authors. ' +
 					'<a href=http://github.com/' + user.user + '/' + user.repo + ' >MIT license</a>.</p>' +
 					'<p>Click the \'i in a circle\' icon for more <a href=index.html#readme.md title="Click here for help and information" >help</a>.</p>' +
 				'</details>' +
 
 				'<hr>' +
-				'<center><a href=javascript:menu.scrollTop=0; style=text-decoration:none; onmouseover=pop2.style.display=""; onmouseout=pop2.style.display="none"; ><h1> &#x2766 <h1></a></center>' +
+				'<center><a href=javascript:menu.scrollTop=0; style=text-decoration:none; onmouseover=pop2.style.display=""; onmouseout=pop2.style.display="none"; ><h1><img src=' + images + 'five-boxes.png height=32 ><h1></a></center>' +
 				'<div class=popUp id=pop2 style=display:none;bottom:20px; >' + user.user + ' - ' + user.subText + '.<br>Click here to return to the top of the page</div>' +
 
 			'</div>' +
@@ -209,14 +196,25 @@
 			'</div>' +
 
 			'<div id=contents ></div>' +
-				'<h1>.</h1>' +
-			'</div>' +
 
 		'';
 
 		window.addEventListener( 'resize', onWindowResize, false );
 
 		onWindowResize();
+
+
+		if ( location.hash ) {
+
+			path = location.hash.slice( 1 ).split( '/' );
+
+			TOO.file = path.pop();
+			TOO.path = path.join( '/' );
+
+//console.log( 'TOO.path', TOO.path );
+//console.log( 'TOO.file', TOO.file );
+
+		}
 
 		TOO.init( user );
 
@@ -233,25 +231,16 @@
 
 		TOO.requestFile( url, callbackMD );
 
-		TOO.contents.style.overflowX = 'hidden';
-
 		function callbackMD( xhr ) {
 
-			text = converter.makeHtml( xhr.target.response );
+			text = xhr.target.response;
 
-			text = text.replace( /src="images/g, 'src="https://raw.githubusercontent.com/bpesquet/thejsway/master/manuscript/images' );
-
-			text = text.replace( /a href=\"LICENSE"/g, 'a href=JavaScript:location.hash="file=LICENSE"');
-
-			text = text.replace( /a href=\"CONTRIBUTING.md"/g, 'a href=JavaScript:location.hash="file=CONTRIBUTING.md"');
-
-			text = text.replace( /a href=\"manuscript\//g, 'a href=JavaScript:location.hash="path=manuscript&file=');
-
-			text = text.replace( /">/g, '";TOO.init(users); >');
+			text = text.replace( /images\//g, images );
 
 			TOO.contents.innerHTML =
+
 			'<div style="border: 0px red solid; margin: 0 auto; width: 800px; position: relative;" >' +
-				text +
+				converter.makeHtml( text ) +
 			'</div>';
 
 			TOO.getFileDataXHR( xhr );
