--- a/tootoo/examples/ztootoo-8-template.html
+++ b/tootoo/examples/ztootoo-8-template.html
@@ -2,18 +2,18 @@
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title>TooToo 7 Template</title>
+<title>TooToo 8 Template</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
 <meta name=description content='Browse and view files on GitHub with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
-<meta name=date content='2017-03-26' >
+<meta name=date content='2017-04-20' >
 </head>
 <body>
 <script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
-<script src=../r7/tootoo-7.js ></script>
+<script src=../r8/tootoo-8.js ></script>
 <script>
 // Copyright © 2017 PushMe PullYou authors. MIT license
-// https://github.com/showdownjs/showdown
+// Thanks to https://github.com/showdownjs/showdown
 
 	let user = {
 		user : 'pushme-pullyou',
@@ -28,48 +28,7 @@
 
 	function init() {
 
-		let css, container, contents, hamburger, menu;
-		const b = '<br>';
-
-		css = document.body.appendChild( document.createElement('style') );
-		css.innerHTML =
-			'html, body { font: 12pt monospace; height: 100%; margin: 0; }' +
-			'a { color: crimson; text-decoration: none; }' +
-			'a:hover { text-decoration: underline; }' +
-			'button, input[type=button] { background-color: #ccc; border: 2px #fff solid; color: #322; }' +
-			'pre, blockquote { background-color: #eee; padding: 10px; }' +
-			'summary { outline: none; }' +
-			'summary h3 { display: inline; }' +
-
-			'.popUp { background-color: white; border: 1px solid red; left: 180px; opacity: 1.0; padding: 5px; position: absolute; width: 120px; z-index: 10; }' +
-
-			'#bars { color: crimson; cursor: pointer; font-size: 24pt; text-decoration: none; }' +
-
-			'#container {  height: 100%; left: 0; position: absolute; transition: left 1s; width: 100%; }' +
-
-// let each type of contents decide its best width and placement
-			'#contents { border: 0px #ccc solid; height: 100%; left: 325px; position: absolute; width: ' + ( window.innerWidth - 325 ) + 'px; }' +
-
-			'#editButton { background-color: #555; color: #fff; opacity: 0.5; padding: 8px; position: fixed; right: 20px; top: 20px; }' +
-			'#editButton:hover { cursor: pointer; opacity: 1; }' +
-			'#editButton a { text-decoration: none; color: #fff; }' +
-
-			'#hamburger { background-color: #eee; left: 325px; position: absolute; top: 20px;  z-index: 1 }' +
-			'#hamburger h2 { margin: 0;}' +
-
-			'#menu { background-color: #eee; border: 1px #ccc solid; box-sizing:border-box; height: 100%; overflow-y: auto; padding: 0 10px; position: fixed; width: 325px; }' +
-			'#menu h2, #menu h4 {margin: 0; }' +
-			'#menuBreadcrumbs h2, #menuBreadcrumbs h3 { font-size: 14pt; margin: 0; }' +
-
-			'#nextFile { color: #888; font-size: 36pt; opacity: 0.5; padding: 8px; position: fixed; right: 20px; top: ' + (0.5 * window.innerHeight ) + 'px; }' +
-			'#nextFile:hover { cursor: pointer; opacity: 1; }' +
-			'#nextFile a { text-decoration: none; color: #888; }' +
-
-			'#previousFile { color: #888; font-size: 36pt; opacity: 0.5; padding: 8px; position: fixed; margin-left: 350px; top: ' + (0.5 * window.innerHeight ) + 'px; }' +
-			'#previousFile:hover { cursor: pointer; opacity: 1; }' +
-			'#previousFile a { text-decoration: none; color: #888; }' +
-
-		'';
+		TOO.setCSS();
 
 		container = document.body.appendChild( document.createElement( 'div' ) );
 		container.id = 'container';
@@ -81,7 +40,6 @@
 					'<a href=https://' + user.user + '.github.io/ title="' + user.subText + '" > &#x2766</a>' + b +
 					'<a href="" title="Click here to refresh this page" >' + document.title + '</a>' +
 					' ~ <a href="https://github.com/' + user.user + '/' + user.repo + '" onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>' +
-
 				'</h2>' +
 
 				'<div class=popUp id=popHelp style=display:none; ><div>Hi there!</div>Click the i-in-circle, info icon for latest updates.</div>' +
@@ -134,15 +92,6 @@
 		window.addEventListener( 'resize', onWindowResize, false );
 
 		onWindowResize();
-
-		if ( location.hash ) {
-
-			path = location.hash.slice( 1 ).split( '/');
-
-			TOO.file = path.pop();
-			TOO.path = path.join();
-
-		}
 
 		TOO.init( user );
 
