--- a/tootoo2/examples/tootoo2-r1.html
+++ b/tootoo2/examples/tootoo2-r1.html
@@ -10,8 +10,10 @@
 </head>
 <body>
 <script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
-<script src=../r1/too-tootoo.js ></script>
+<script src=../r1/css.js ></script>
 <script src=../r1/sel-select-users.js ></script>
+<script src=../r1/too-tootoo.js ></script>
+
 <script>
 // Copyright 2017 Jaanga authors ~ MIT license
 
@@ -34,7 +36,7 @@
 
 		let container, contents, hamburger, menu;
 
-		TOO.setCSS();
+		CSS.setCSS();
 
 		container = document.body.appendChild( document.createElement( 'div' ) );
 		container.id = 'container';
