--- a/tootoo2/examples/tootoo2-prediqtiv-r1.html
+++ b/tootoo2/examples/tootoo2-prediqtiv-r1.html
@@ -4,13 +4,13 @@
 <meta charset=utf-8 >
 <title></title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
-<meta name=description content='Basic slide in and slide out menu with three bar icon that adjusts for small screen size.' >
+<meta name=description content='A variety of tools to browse and view all S&P 500 symbols all at once.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
 <meta name=date content='2016-11-05' >
 </head>
 <body>
 <script src=https://cdn.rawgit.com/showdownjs/showdown/master/dist/showdown.min.js ></script>
-<script src=../r1/css.js ></script>
+<script src=../r1/css-prediqtiv.js ></script>
 <script src=../r1/sel-select-users.js ></script>
 <script src=../r1/too-tootoo.js ></script>
 <script>
